--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@
 
 .jumbotron {
   position: relative;
-  background-image: url(http://bonds-gallery.com/wp-content/uploads/2014/04/space-wallpaper-blue-96107.jpg);
+  background-image: url(https://dl.dropboxusercontent.com/u/15432916/8Continuation_2014/pics/bannerImg.png);
   height: 300px;
 }
 
