--- a/main.css
+++ b/main.css
@@ -67,5 +67,12 @@ col-md-4 {
 
 .col-md-4 ul {
   font-size: 24px;
-  list-style-type:  square;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.col-md-4 a {
+  display: block;
+  width: 60px;
 }
