--- a/main.css
+++ b/main.css
@@ -66,17 +66,31 @@ col-md-4 {
 }
 
 .col-md-4 ul {
-  font-size: 24px;
+  font-size: 36px;
   list-style-type: none;
   margin: 0;
   padding: 10;
+  overflow:hidden;
 }
 
-.col-md-4 a {
+.col-md-4 a:link, a:visited {
   display: block;
-  width: 240px;
+  width: 400px;
+  font-weight:bold;
+  color:#FFFFFF;
+  background-color:#98bf21;
+  text-align:center;
+  padding:4px;
+  text-decoration:none;
+  text-transform:uppercase;
 }
 
 .col-md-4 li {
   float: left;
+}
+
+
+.col-md-4 a:hover,a:active
+{
+background-color:#7A991A;
 }
