--- a/main.css
+++ b/main.css
@@ -79,6 +79,8 @@ col-md-4 {
   font-weight:bold;
   color:#FFFFFF;
   background-color:#98bf21;
+  border-style: solid;
+  border-width: 5px;
   text-align:center;
   padding:4px;
   text-decoration:none;
