--- a/main.css
+++ b/main.css
@@ -78,7 +78,7 @@ col-md-4 {
   width: 400px;
   font-weight:bold;
   color:#FFFFFF;
-  background-color:#98bf21;
+  background-color:#666666;
   border-style: solid;
   border-width: 5px;
   text-align:center;
@@ -94,5 +94,5 @@ col-md-4 {
 
 .col-md-4 a:hover,a:active
 {
-background-color:#7A991A;
+background-color:#000000;
 }
