--- a/main.css
+++ b/main.css
@@ -73,24 +73,24 @@
 
 .col-md-4 a:link, a:visited {
   display: block;
-  width: 800px;
+  width: 60px;
   font-weight:bold;
   color:#FFFFFF;
   background-color:#666666;
   border-style: solid;
   border-width: 5px;
-  text-align:center;
+  text-align:left;
   padding:8px;
   text-decoration:none;
   text-transform:uppercase;
 }
 
 .col-md-4 li {
-  float: center;
+  float: left;
 }
 
 
 .col-md-4 a:hover,a:active
 {
-background-color:#000000;
+  background-color:#000000;
 }
