--- a/main.css
+++ b/main.css
@@ -79,7 +79,7 @@
   background-color:#666666;
   border-style: solid;
   border-width: 5px;
-  text-align:left;
+  text-align:center;
   padding:8px;
   text-decoration:none;
   text-transform:uppercase;
