--- a/main.css
+++ b/main.css
@@ -73,13 +73,13 @@
 
 .col-md-4 a:link, a:visited {
   display: block;
-  width: 60px;
+  width: 240px;
   font-weight:bold;
   color:#FFFFFF;
   background-color:#666666;
   border-style: solid;
   border-width: 5px;
-  text-align:center;
+  text-align:left;
   padding:8px;
   text-decoration:none;
   text-transform:uppercase;
