--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-.nav a {
+.nav a:active, a:hover, a:visited, a:link {
   color: #5a5a5a;
   font-size: 11px;
   font-weight: bold;
@@ -90,7 +90,6 @@
 }
 
 
-.col-md-4 a:hover,a:active
-{
+.col-md-4 a:hover,a:active {
   background-color:#000000;
 }
