--- a/main.css
+++ b/main.css
@@ -71,12 +71,12 @@
   float: center;
 }
 
-.col-md-4 .ul .li a:link, a:visited {
+.col-md-4 a:link, a:visited {
   display: block;
   width: 240px;
   font-weight:bold;
   color:#ffffff;
-  background-color:#000000;
+  background-color:#666666;
   border-style: solid;
   border-width: 5px;
   text-align:left;
@@ -91,5 +91,5 @@
 
 
 .col-md-4 a:hover,a:active {
-  background-color:#666666;
+  background-color:#000000;
 }
