--- a/main.css
+++ b/main.css
@@ -76,7 +76,7 @@
   width: 240px;
   font-weight:bold;
   color:#ffffff;
-  background-color:#666666;
+  background-color:#ffffff;
   border-style: solid;
   border-width: 5px;
   text-align:left;
