--- a/main.css
+++ b/main.css
@@ -75,7 +75,7 @@
   display: block;
   width: 240px;
   font-weight:bold;
-  color:#666666;
+  color:#ffffff;
   background-color:#666666;
   border-style: solid;
   border-width: 5px;
