--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 .nav a:active, a:hover, a:visited, a:link {
-  color: #5a5a5a;
+  color: #ffffff;
   font-size: 11px;
   font-weight: bold;
   padding: 14px 10px;
