--- a/main.css
+++ b/main.css
@@ -1,9 +1,17 @@
 .nav a:active, a:hover, a:visited, a:link {
   color: #ffffff;
-  font-size: 11px;
+  font-size: 12px;
   font-weight: bold;
   padding: 14px 10px;
   text-transform: uppercase;
+  
+  display: block;
+  width: 60px;
+  color:#ffffff;
+  background-color:#666666;
+
+  text-align:left;
+}
 }
 
 .nav li {
