--- a/main.css
+++ b/main.css
@@ -5,8 +5,8 @@
   padding: 14px 10px;
   text-transform: uppercase;
   
-  display: block;
-  width: 60px;
+  display: inline;
+  width: 150px;
   color:#ffffff;
   background-color:#666666;
 
