--- a/main.css
+++ b/main.css
@@ -1,16 +1,9 @@
-.nav a:active, a:hover, a:visited, a:link {
-  color: #ffffff;
-  font-size: 12px;
+.nav a {
+  color: #5a5a5a;
+  font-size: 11px;
   font-weight: bold;
   padding: 14px 10px;
   text-transform: uppercase;
-
-  width: 150px;
-  color:#ffffff;
-  background-color:#666666;
-  text-decoration:none;
-
-}
 }
 
 .nav li {
