--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-.nav a {
+#nav a {
   color: #5a5a5a;
   font-size: 11px;
   font-weight: bold;
@@ -6,7 +6,7 @@
   text-transform: uppercase;
 }
 
-.nav li {
+#nav li {
   display: inline;
 }
 
