--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-#nav a {
+.nav a {
   color: #5a5a5a;
   font-size: 11px;
   font-weight: bold;
@@ -6,7 +6,7 @@
   text-transform: uppercase;
 }
 
-#nav li {
+.nav li {
   display: inline;
 }
 
@@ -71,7 +71,7 @@
   float: center;
 }
 
-.col-md-4 a:link, a:visited {
+.col-md-4 a {
   display: block;
   width: 240px;
   font-weight:bold;
@@ -87,9 +87,4 @@
 
 .col-md-4 li {
   float: left;
-}
-
-
-.col-md-4 a:hover,a:active {
-  background-color:#000000;
 }
