--- a/list.css
+++ b/list.css
@@ -32,7 +32,7 @@
 }
 
 .jumbotron h1 {
-  color: #ffffff;
+  color: #666666;
   text-shadow: 0px 0px 5px #000000;
   font-size: 60px;  
   font-family: Fantisy;
@@ -40,7 +40,7 @@
 }
 
 .jumbotron p {
-  color: #ffffff;
+  color: #666666;
   text-wrap:normal;
   text-shadow: 0px 0px 3px #000000;
   font-size: 25px;
