--- a/list.css
+++ b/list.css
@@ -12,7 +12,7 @@
 
 .jumbotron {
   position: relative;
-  background-image: url(http://www.mccla.org/wordpress/wp-content/uploads/2013/06/banner-black-950x300.jpg);
+  background-image: url();
   background-color: 666666;
   height: 200px;
 }
