--- a/list.css
+++ b/list.css
@@ -32,17 +32,17 @@
 }
 
 .jumbotron h1 {
-  color: #666666;
-  text-shadow: 0px 0px 5px #000000;
+  color: #ffffff;
+  text-shadow: 0px 0px 5px #666666;
   font-size: 60px;  
   font-family: Fantisy;
   font-weight: bold;
 }
 
 .jumbotron p {
-  color: #666666;
+  color: #ffffff;
   text-wrap:normal;
-  text-shadow: 0px 0px 3px #000000;
+  text-shadow: 0px 0px 3px #666666;
   font-size: 25px;
   font-family: Arial, Helvetica, sans-serif;
 }
