--- a/list.css
+++ b/list.css
@@ -34,7 +34,7 @@
   color: #000000;
   text-shadow: 0px 0px 5px #ffffff;
   font-size: 60px;  
-  font-family: Fantisy;
+  font-family: Fantasy;
   font-weight: bold;
 }
 
