--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@
   color: #ffffff;
   text-shadow: 0px 0px 5px #000000;
   font-size: 60px;  
-  font-family: Fantisy;
+  font-family: Fantasy;
   font-weight: bold;
 }
 
