--- a/index.css
+++ b/index.css
@@ -12,13 +12,15 @@
 
 .picture {
   position: relative;
+  align: middle;
+  float: center;
   background-image: url();
-  height: 300px;
+  height: 850px;
 }
 
 .picture .container {
   position: relative;
-  float: center;
+
   bottom:0px;
 }
 
