--- a/index.css
+++ b/index.css
@@ -30,6 +30,7 @@
 .picture h1 {
   color: #ffffff;
   text-shadow: 0px 0px 5px #000000;
+  text-align: center;
   font-size: 60px;  
   font-family: Fantasy;
 }
