--- a/index.css
+++ b/index.css
@@ -13,7 +13,9 @@
 .picture {
   position: relative;
   background-image: url();
-  height: 850px;
+  height: 800px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .picture img {
