--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@
 
 .picture {
   position: relative;
-  background-image: url();
+  background-color: #000000;
   height: 800px;
   margin-left: auto;
   margin-right: auto;
